Corrects footer alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,6 @@ a, a:visited {
 footer {
   position: absolute;
   text-align: center;
-  padding: ;
   bottom: 0;
   width: 100vw;
 }
